--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -715,6 +715,6 @@ The application cannot continue.</value>
     <value>Browse to this url (or double click the row)</value>
   </data>
   <data name="CaptionIconsDesigned1" xml:space="preserve">
-    <value>Icons designed by Linear Color SEO (Freepik) from Flaticon</value>
+    <value>Icons designed by Linear Color SEO (Freepik), Smashicons, Swifticons, and Maxim Basinski from Flaticon</value>
   </data>
 </root>
