--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -128,8 +128,8 @@
   <data name="Color" xml:space="preserve">
     <value>CREATE TABLE "color" (
   "id" TEXT NOT NULL,
-  "value" TEXT,
-  "enabled" BOOLEAN NOT NULL DEFAULT 1,
+  "foreground" TEXT NOT NULL,
+  "background" TEXT NOT NULL,
   PRIMARY KEY ("id")
 );</value>
     <comment>ddl for configuration color table</comment>
