Implemented grouping by date when viewing the titles submitted to a publication. Fixes the earlier problem of the data grid view columns getting squashed when a publication had no submission. Code cleanup.

--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -762,4 +762,10 @@ The application cannot continue.</value>
   <data name="ConfigDataGrid" xml:space="preserve">
     <value>Data Grid</value>
   </data>
+  <data name="TooltipPublisherInPeriod" xml:space="preserve">
+    <value>Publisher is currently in one of its submission periods</value>
+  </data>
+  <data name="TooltipPublisherPay" xml:space="preserve">
+    <value>Publisher is a paying market</value>
+  </data>
 </root>
