Add notes column to the title table

--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -330,7 +330,8 @@ CREATE INDEX "submissionmessageattachment_messageid" ON "submissionmessageattach
   "title" TEXT NOT NULL, 
   "written" TIMESTAMP NOT NULL, 
   "authorid" INTEGER NOT NULL DEFAULT 1, 
-  "ready" BOOLEAN DEFAULT 0 
+  "ready" BOOLEAN DEFAULT 0,
+  "notes" TEXT
 );</value>
     <comment>ddl for title table</comment>
   </data>
