--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Alert" xml:space="preserve">
+    <value>CREATE TABLE "alert" (
+  "id" INTEGER PRIMARY KEY NOT NULL, 
+  "title" TEXT NOT NULL, 
+  "date" TIMESTAMP NOT NULL,
+  "enabled" BOOLEAN DEFAULT 0
+);</value>
+    <comment>ddl for alert table</comment>
+  </data>
   <data name="Author" xml:space="preserve">
     <value>CREATE TABLE "author" (
   "id" INTEGER PRIMARY KEY NOT NULL, 
