--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -555,7 +555,7 @@ Last exported: {1}</value>
     <value>Find Orphans</value>
   </data>
   <data name="HeaderToolOperationOrphan" xml:space="preserve">
-    <value>This operation searches all files beneath the title root directory to find those files that are not associated with a title entry.</value>
+    <value>This operation searches all files beneath the title root directory to find those files that are not associated with a title entry. The submission document folder and title export folder are automatically excluded from the search if they exist beneath title root. You can exclude other folders in configuration.</value>
   </data>
   <data name="InvalidOpTitleRootFolderNotSet" xml:space="preserve">
     <value>The title root folder hasn't been set or doesn't exist. Fix the configuration setting and try again.</value>
@@ -745,7 +745,7 @@ The application cannot continue.</value>
     <value>Submission</value>
   </data>
   <data name="ConfigDataGridRowHeight" xml:space="preserve">
-    <value>Row height</value>
+    <value>Data grid row height</value>
   </data>
   <data name="TooltipColorAlpha" xml:space="preserve">
     <value>Display drop down colors in alphabetical order</value>
@@ -757,7 +757,7 @@ The application cannot continue.</value>
     <value>Reset all colors to their default values</value>
   </data>
   <data name="ConfigDataGridRowAlternation" xml:space="preserve">
-    <value>Row alternation</value>
+    <value>Data grid row alternation</value>
   </data>
   <data name="ConfigDataGrid" xml:space="preserve">
     <value>Data Grid</value>
@@ -843,5 +843,13 @@ Do you want to continue?</value>
   </data>
   <data name="CommandAlert" xml:space="preserve">
     <value>Alerts</value>
+  </data>
+  <data name="ConfirmationCreateTitleFromOrphan" xml:space="preserve">
+    <value>This operation will create a title entry and use the selected file as the first version that is associated with the title. The written date for the title will be set to the last modified date of the file.
+
+Do you want to continue?</value>
+  </data>
+  <data name="ConfigOrphanExclusion" xml:space="preserve">
+    <value>Orphan exclusions. This value specifies folder exclusions used during orphan detection. Values are separated by semi-colon and if found within a folder name indicate that the folder is ignored.</value>
   </data>
 </root>
