--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -337,6 +337,7 @@ CREATE INDEX "submissionmessageattachment_messageid" ON "submissionmessageattach
     <value>CREATE TABLE "title" (
   "id" INTEGER PRIMARY KEY NOT NULL, 
   "title" TEXT NOT NULL, 
+  "created" TIMESTAMP NOT NULL, 
   "written" TIMESTAMP NOT NULL, 
   "authorid" INTEGER NOT NULL DEFAULT 1, 
   "ready" BOOLEAN DEFAULT 0,
