--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -196,6 +196,7 @@ CREATE INDEX "link_credentialid" ON "link" ("credentialid");</value>
   "titleid" INTEGER NOT NULL,
   "publisherid" INTEGER NOT NULL DEFAULT 0,
   "added" TIMESTAMP NOT NULL,
+  "published" TIMESTAMP,
   "url" TEXT,
   "notes" TEXT
 );
