Renamed publisher simultaneous column to exclusive (reversing its boolean meaning) and display an icon for this field in the publisher list. Add ability to modify / clear the published date of the published table Update custom calendar control to handle automatically switching the display date to the current date when the selected date is null (such as a response date and published date)

--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -864,4 +864,7 @@ Do you want to continue?</value>
   <data name="TooltipTitleReady" xml:space="preserve">
     <value>Title is flagged as ready</value>
   </data>
+  <data name="TooltipPublisherExclusive" xml:space="preserve">
+    <value>Publisher wants an exclusive submission, i.e. does not accept simultaneous</value>
+  </data>
 </root>
