--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -220,7 +220,7 @@ CREATE INDEX "published_titleid" ON "published" ("titleid");</value>
   "credentialid" INTEGER NOT NULL DEFAULT 0,
   "notes" TEXT,
   "added" TIMESTAMP NOT NULL DEFAULT 0,
-  "simultaneous" BOOLEAN NOT NULL DEFAULT 0,
+  "exclusive" BOOLEAN NOT NULL DEFAULT 0,
   "paying" BOOLEAN NOT NULL DEFAULT 0,
   "followup" BOOLEAN NOT NULL DEFAULT 0,
   "goner" BOOLEAN NOT NULL DEFAULT 0
