Add support for specifying a template file used when creating a new submission document. Styles from the template file are copied to the new document.

--- a/Source/Panama.Database/Resources/Data.resx
+++ b/Source/Panama.Database/Resources/Data.resx
@@ -123,7 +123,7 @@
   </data>
   <data name="DocumentType" xml:space="preserve">
     <value>INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (0, 'Unknown', NULL, 100, 0);
-INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (1, 'Word Document (OpenXml)', '.docx', 1, 1);
+INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (1, 'Word Document (OpenXml)', '.docx;.dotm', 1, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (2, 'Word Document (Old)', '.doc;.rtf', 2, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (3, 'Pdf Document', '.pdf', 3, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (4, 'Text Document', '.txt', 4, 1);
