--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -806,25 +806,25 @@ Do you want to continue?</value>
     <value>Follow Up</value>
   </data>
   <data name="CommandPublisherFilterFollowupTooltip" xml:space="preserve">
-    <value>Filter title list to display only publishers that are active and flagged for follow up</value>
+    <value>Filter publisher list to display only publishers that are active and flagged for follow up</value>
   </data>
   <data name="CommandPublisherFilterInPeriod" xml:space="preserve">
     <value>In Period</value>
   </data>
   <data name="CommandPublisherFilterInPeriodTooltip" xml:space="preserve">
-    <value>Filter title list to display only publishers that are active and currently within a submission period</value>
+    <value>Filter publisher list to display only publishers that are active and currently within a submission period</value>
   </data>
   <data name="CommandPublisherFilterPaying" xml:space="preserve">
     <value>Paying</value>
   </data>
   <data name="CommandPublisherFilterPayingTooltip" xml:space="preserve">
-    <value>Filter title list to display only publishers that are active and are a paying market</value>
+    <value>Filter publisher list to display only publishers that are active and are a paying market</value>
   </data>
   <data name="CommandPublisherFilterActive" xml:space="preserve">
     <value>Active</value>
   </data>
   <data name="CommandPublisherFilterActiveTooltip" xml:space="preserve">
-    <value>Filter title list to display only publishers that are active, i.e. not flagged as a goner</value>
+    <value>Filter publisher list to display only publishers that are active, i.e. not flagged as a goner</value>
   </data>
   <data name="CommandAddAlert" xml:space="preserve">
     <value>Add alert</value>
@@ -887,5 +887,14 @@ Do you want to continue?</value>
   </data>
   <data name="CommandSubmissionFilterTryAgainTooltip" xml:space="preserve">
     <value>Filter submission list to display submissions with a response type of Try Again</value>
+  </data>
+  <data name="TooltipPublisherHasActive" xml:space="preserve">
+    <value>Publisher currently has at least one submission that is active</value>
+  </data>
+  <data name="CommandPublisherFilterHaveSub" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="CommandPublisherFilterHaveSubTooltip" xml:space="preserve">
+    <value>Filter publisher list to display only publishers that currently have an open submission</value>
   </data>
 </root>
