Add menu option to view submission message file. Add tool to sync message file names according their date / sender / subject.

--- a/Source/Panama.Database/Resources/Data.resx
+++ b/Source/Panama.Database/Resources/Data.resx
@@ -127,12 +127,13 @@ INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported")
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (2, 'Word Document (Old)', '.doc;.rtf', 2, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (3, 'Pdf Document', '.pdf', 3, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (4, 'Text Document', '.txt', 4, 1);
-INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (5, 'Outlook Message', '.msg', 8, 1);
+INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (5, 'Outlook Message', '.msg', 7, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (6, 'Outlook Message (Direct Reference)', NULL, 100, 0);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (7, 'Outlook Folder (Direct Reference)', NULL, 100, 0);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (8, 'Audio', '.mp3', 6, 1);
 INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (9, 'Html', '.html;.htm', 5, 1);
-INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (10, 'Image', '.jpg;.jpeg;.png', 7, 1);</value>
+INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (10, 'Images', '.jpg;.jpeg;.png', 7, 1);
+INSERT INTO "documenttype" ("id", "name", "extensions", "ordering", "supported") VALUES (11, 'Executable', '.exe', 9, 1);</value>
     <comment>SQL to create the standard data for the documenttype table</comment>
   </data>
   <data name="Language" xml:space="preserve">
