Initial checkin of functionality to have title versions / revisions to better organize titles that, for example, have multiple formats.

--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -363,7 +363,8 @@ CREATE INDEX "submissionmessageattachment_messageid" ON "submissionmessageattach
   "note" TEXT, 
   "updated" TIMESTAMP NOT NULL, 
   "size" INTEGER NOT NULL DEFAULT 0,
-  "version" INTEGER NOT NULL DEFAULT 0, 
+  "version" INTEGER NOT NULL DEFAULT 0,
+  "revision" TEXT NOT NULL,
   "langid" TEXT NOT NULL,
   "wordcount" INTEGER NOT NULL DEFAULT 0
 );
