Update initialization schema for title version table to make revision an integer. Tools update.

--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -364,7 +364,7 @@ CREATE INDEX "submissionmessageattachment_messageid" ON "submissionmessageattach
   "updated" TIMESTAMP NOT NULL, 
   "size" INTEGER NOT NULL DEFAULT 0,
   "version" INTEGER NOT NULL DEFAULT 0,
-  "revision" TEXT NOT NULL,
+  "revision" INTEGER NOT NULL DEFAULT 65,
   "langid" TEXT NOT NULL,
   "wordcount" INTEGER NOT NULL DEFAULT 0
 );
