--- a/Source/Panama.Database/Resources/Create.resx
+++ b/Source/Panama.Database/Resources/Create.resx
@@ -341,7 +341,8 @@ CREATE INDEX "submissionmessageattachment_messageid" ON "submissionmessageattach
   "created" TIMESTAMP NOT NULL, 
   "written" TIMESTAMP NOT NULL, 
   "authorid" INTEGER NOT NULL DEFAULT 1, 
-  "ready" BOOLEAN DEFAULT 0,
+  "ready" BOOLEAN NOT NULL DEFAULT 0,
+  "qflag" BOOLEAN NOT NULL DEFAULT 0,
   "notes" TEXT
 );</value>
     <comment>ddl for title table</comment>
