--- a/Source/Panama/Resources/Strings.resx
+++ b/Source/Panama/Resources/Strings.resx
@@ -715,7 +715,7 @@ The application cannot continue.</value>
     <value>Browse to this url (or double click the row)</value>
   </data>
   <data name="CaptionIconsDesigned1" xml:space="preserve">
-    <value>Icons designed by Linear Color SEO (Freepik), Smashicons, Swifticons, and Maxim Basinski from Flaticon</value>
+    <value>Icons designed by Linear Color SEO (Freepik), Smashicons, Swifticons, Maxim Basinski, and Eleonor Wang from Flaticon</value>
   </data>
   <data name="HeaderData" xml:space="preserve">
     <value>Data</value>
