--- a/src/Panama/Resources/Strings.resx
+++ b/src/Panama/Resources/Strings.resx
@@ -957,4 +957,10 @@ Do you want to continue?</value>
   <data name="TooltipScrambleWord" xml:space="preserve">
     <value>When activated, words within the lines will be scrambled</value>
   </data>
+  <data name="CommandSelfPublisher" xml:space="preserve">
+    <value>Self Publishers</value>
+  </data>
+  <data name="TooltipSelfPublisherPublishedCount" xml:space="preserve">
+    <value>Published count - total number of items published</value>
+  </data>
 </root>
