--- a/src/Panama.Database/Resources/Create.resx
+++ b/src/Panama.Database/Resources/Create.resx
@@ -245,6 +245,20 @@ CREATE INDEX "publisher_credentialid" ON "publisher" ("credentialid");</value>
 );</value>
     <comment>ddl for schema table</comment>
   </data>
+  <data name="SelfPublished" xml:space="preserve">
+    <value>CREATE TABLE "selfpublished" (
+  "id" INTEGER PRIMARY KEY NOT NULL,
+  "titleid" INTEGER NOT NULL,
+  "selfpublisherid" INTEGER NOT NULL DEFAULT 0,
+  "added" TIMESTAMP NOT NULL,
+  "published" TIMESTAMP,
+  "url" TEXT,
+  "notes" TEXT
+);
+CREATE INDEX "selfpublished_selfpublisherid" ON "selfpublished" ("selfpublisherid");
+CREATE INDEX "selfpublished_titleid" ON "selfpublished" ("titleid");</value>
+    <comment>ddl for selfpublished table</comment>
+  </data>
   <data name="SelfPublisher" xml:space="preserve">
     <value>CREATE TABLE "selfpublisher" (
   "id" INTEGER PRIMARY KEY NOT NULL,
